@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add the '+' attribute prefix (constant only)
+
 0.007     2019-09-19 16:43:04-07:00 America/Los_Angeles
 
     - Add < and > attribute prefixes (read only and write-only)
